Added match summary sorted & refactoring